# httpstat

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  color.rs  http.rs  main.rs  slo.rs  timing.rs
src/output/: json.rs  mod.rs  pretty.rs
tests/: cli.rs
